# code-agent

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  FINAL_FIX_SUMMARY.md  GIT_COMMIT_SUMMARY.md  LLM_CONNECTOR_0.2.3_TEST.md  README.md  README_CN.md  config.toml  final_verification.sh
.cargo/: config.toml
.qoder/rules/: default.md
.zed/: README.md  project.json  settings.json  workspace.json
agent-terminal/: Cargo.toml
agent-terminal/src/: agent.rs  cli.rs  context.rs
agent-terminal/src/tools/: list_files.rs  mod.rs  read_file.rs  registry.rs  run_command.rs
benches/: arc_optimization_bench.rs
doc/: AGENT_TESTING_GUIDE.md  AGENT_TYPES.md  ARC_OPTIMIZATION_PHASE1_COMPLETE.md  ARC_OPTIMIZATION_PLAN.md  ARC_OPTIMIZATION_PROGRESS.md  ARC_USAGE_ANALYSIS.md  CODEX_PROMPT_ANALYSIS.md  CODE_QUALITY_IMPROVEMENTS.md  CODE_STRUCTURE.md  CODE_STYLE_GUIDE.md  DOCUMENTATION_CLEANUP_PLAN.md  HOW_LLM_KNOWS_OUTPUT_FORMAT.md  LLM_CONNECTOR_ANALYSIS.md  PROMPT_ENGINEERING.md  PROMPT_SYSTEM_FEATURE_ANALYSIS.md  REFACTORING_GUIDE.md  REFACTORING_HISTORY.md  RUST_ANALYZER_SETUP.md  SERVICE_API.md  SERVICE_MODULE_REFACTORING_NEEDED.md  SERVICE_REFACTORING_COMPLETE.md  SESSION_SUMMARY.md  TASK_HELPERS_RENAME_ANALYSIS.md  TESTING_GUIDE.md  agent-workflow.md  code-agent-comparison-and-recommendations.md  codex-agent-workflow.md  codex-core-workflow.md  codex-keyword-prompts.md  objective-code-agent-analysis.md  service_api.md  system-design-cn.md  system-design.md
doc/archive/: METRICS_DUPLICATION_ANALYSIS.md  MODEL_ABSTRACTION_ANALYSIS.md  MODEL_REFACTORING_COMPLETE.md  SERVICE_TYPES_REFACTORING.md  UNDERSTANDING_TO_PLANNING_RENAME.md
docs/: EXECUTABLE_PLANNING.md  EXECUTION_GUARDRAILS_DESIGN.md  GUARDRAILS_COMPLETION_REPORT.md  GUARDRAILS_IMPLEMENTATION_SUMMARY.md  GUARDRAILS_QUICK_REFERENCE.md  LLM_CONNECTOR_QUICK_REFERENCE.md  LLM_CONNECTOR_UPGRADE.md  LONGCAT_TEST_REPORT.md  PHASE_4_COMPLETION_SUMMARY.md  README.md  SEQUENTIAL_EXECUTION_DESIGN.md  SEQUENTIAL_EXECUTION_ENHANCED.md  SEQUENTIAL_EXECUTION_LLM_INTEGRATION.md  SEQUENTIAL_EXECUTION_SUMMARY.md  longcat_raw_responses.md  system-design.md
examples/: Cargo.toml  README.md  agent_test_zhipu.rs  agent_types_demo.rs  capture_longcat_raw.rs  config_driven_agent.rs  docker-compose.yml  guardrails_demo.rs  http_client.rs  in_process_service.rs  license_management_demo.rs  license_management_with_llm.rs  llm_connector_features.rs  prompt_building_demo.rs  prompt_engineering.rs  rust_client.rs  sequential_enhanced_demo.rs  sequential_execution_demo.rs  sequential_llm_demo.rs  test_longcat_capture_responses.rs  test_longcat_detailed.rs  test_providers.rs  test_zhipu_api.rs
prompts/: default.yaml  optimized-template.yaml  rust-project.yaml
src/: agent.rs  cli.rs  config.rs  context.rs  errors.rs  execution.rs  lib.rs  llm.rs  main.rs  models.rs  parser.rs  prompts.rs  security.rs  service_types.rs  task_helpers.rs  text_parser.rs  tools.rs  types.rs  understanding.rs
src/agent/: executor.rs  mod.rs  planner.rs
src/execution/: command_ops.rs  file_ops.rs  guardrails.rs  mod.rs  sequential.rs
src/planning/: approach_parser.rs  engine.rs  mod.rs
src/prompts/: README.md  defaults.rs  mod.rs
src/server/: main.rs
src/service/: api.rs  core.rs  error.rs  metrics.rs  metrics_simple.rs  mod.rs
src/service/types/: batch.rs  mod.rs  service.rs  task.rs  websocket.rs
src/tools/: list_files.rs  run_command.rs  search_files.rs  write_file.rs
test/: README.md  demo.sh  run_tests.sh  test_agent.sh  test_agent_simple.sh  test_detailed.sh  test_file  test_file.txt  test_script  verify_tests.sh
test_reports/: agent_test_deepseek_20251007_224434.md
tests/: COMPLEX_TASK_ANALYSIS_REPORT.md  README.md  README_zhipu_test.md  RUST_PROJECT_PLANNING_TEST_ANALYSIS.md  common.rs  plan.md  test_agent.sh  test_agent_task_planning_demo.rs  test_agent_workflow_zhipu.rs  test_api_connection.sh  test_complete_build_steps.rs  test_complete_taskplan_display.rs  test_complex_license_project.rs  test_complex_task_planning.rs  test_comprehensive_domain_analysis.rs  test_detailed_steps_display.rs  test_direct_llm_connector_031.rs  test_direct_observation.rs  test_improved_parsing.rs  test_license_management_decomposition.rs  test_llm_connector.rs  test_meeting_room_booking_decomposition.rs  test_parsing_generalization.rs  test_portfolio_management_decomposition.rs  test_quick_steps_parse.rs  test_raw_llm_observation.rs  test_rust_project_planning.rs  test_rust_project_verbose.rs  test_simple.sh  test_simple_llm_observation.rs  test_simple_rust_planning.rs  test_simple_steps_demo.rs  test_task_runner_llm.rs  test_taskplan_print_demo.rs  观察测试说明.md
