[package]
name = "task-runner"
version = "0.2.0"
edition = "2021"
authors = ["AI Agent Team"]
description = "Simple AI-Powered Task Runner Service"
license = "MIT"
repository = "https://github.com/lipish/task-runner"
keywords = ["ai", "task-runner", "automation", "llm", "executor"]
categories = ["development-tools", "text-processing"]

[lib]
name = "task_runner"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# LLM connector
llm-connector = "0.2.3"

# HTTP server (optional, for service feature)
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File system
tokio-fs = "0.1"

# Mocking for tests
mockall = "0.12"

# Metrics and monitoring (optional, for service feature)
metrics = { version = "0.23", optional = true }
metrics-exporter-prometheus = { version = "0.13", optional = true }
dashmap = "6.1.0"

[features]
default = ["core"]
core = []
service = ["axum", "tower", "tower-http", "metrics", "metrics-exporter-prometheus"]
full = ["core", "service"]

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }

[[bench]]
name = "arc_optimization_bench"
harness = false

[profile.release]
opt-level = 3
