[package]
name = "agent-terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
thiserror = "2.0.16"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
clap = { version = "4.5.47", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
async-openai = { version = "0.29.3", default-features = false, features = ["rustls"] }
regex = "1.11.2"
walkdir = "2.5.0"
ignore = "0.4.23"
globset = "0.4.16"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tempfile = "3.22.0"
async-trait = "0.1"
dunce = "1.0"

[profile.release]
opt-level = 3

