[package]
name = "code-agent-examples"
version = "0.2.0"
edition = "2021"
publish = false

[dependencies]
code-agent = { path = "..", features = ["service"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

[[example]]
name = "rust_client"
path = "rust_client.rs"

[[example]]
name = "http_client"
path = "http_client.rs"

[[example]]
name = "in_process_service"
path = "in_process_service.rs"